--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "@ts-sql-layer/core",
-  "version": "0.0.1",
+  "name": "@mthomas88/ts-data-mapper",
+  "version": "0.0.2",
   "main": "index.js",
+  "private": false,
   "license": "MIT",
   "scripts": {
-    "test": "vitest"
+    "test": "vitest",
+    "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
     "@types/node": "^20.11.27",
+    "ts-node": "^10.9.2",
     "typescript": "^5.4.2",
     "vitest": "^1.3.1"
   },
