--- a/package.json
+++ b/package.json
@@ -6,17 +6,19 @@
   "license": "MIT",
   "scripts": {
     "test": "vitest",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "benchmark": "ts-node ./benchmarks/index.ts"
   },
   "devDependencies": {
     "@types/node": "^20.11.27",
+    "benny": "^3.7.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.2",
     "vitest": "^1.3.1"
   },
   "dependencies": {
     "date-fns": "^3.4.0",
-    "nanoid": "^5.0.6",
+    "nanoid": "3",
     "zod": "^3.22.4"
   }
 }
