--- a/package.json
+++ b/package.json
@@ -17,8 +17,6 @@
     "vitest": "^1.3.1"
   },
   "dependencies": {
-    "date-fns": "^3.4.0",
-    "nanoid": "3",
-    "zod": "^3.22.4"
+    "nanoid": "3"
   }
 }
