--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "benchmark": "ts-node ./benchmarks/index.ts"
   },
   "devDependencies": {
+    "@types/debug": "^4.1.12",
     "@types/node": "^20.11.27",
     "benny": "^3.7.1",
     "ts-node": "^10.9.2",
@@ -17,6 +18,7 @@
     "vitest": "^1.3.1"
   },
   "dependencies": {
+    "debug": "^4.3.4",
     "nanoid": "3"
   }
 }
