--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@types/node": "^20.11.27",
     "@vitest/coverage-v8": "^1.4.0",
     "benny": "^3.7.1",
+    "commitizen": "^4.3.0",
+    "cz-conventional-changelog": "^3.3.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.2",
     "vitest": "^1.3.1"
@@ -27,5 +29,10 @@
     "nanoid": "3",
     "typebox": "^0.0.1"
   },
-  "packageManager": "yarn@4.1.1"
+  "packageManager": "yarn@4.1.1",
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  }
 }
