--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "typecheck": "tsc --noEmit",
     "benchmark": "ts-node ./benchmarks/index.ts",
     "coverage": "vitest run --coverage",
-    "commit": "cz"
+    "commit": "cz",
+    "postinstall": "husky",
+    "prepack": "pinst --disable",
+    "postpack": "pinst --enable"
   },
   "devDependencies": {
     "@types/debug": "^4.1.12",
@@ -19,6 +22,8 @@
     "benny": "^3.7.1",
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
+    "husky": "^9.0.11",
+    "pinst": "^3.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.2",
     "vitest": "^1.3.1"
