chore(hooks): added in post-commit hook to push to origin after successful commit
will run tests also and if they fail will abort the commit

BREAKING CHANGE: won't be able to commit unless your tests now pass

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "license": "MIT",
   "scripts": {
     "cli": "ts-node ./src/cli.ts",
-    "test": "vitest",
-    "typecheck": "tsc --noEmit",
+    "test": "vitest run",
+    "watch-tests": "vitest watch",
     "benchmark": "ts-node ./benchmarks/index.ts",
     "coverage": "vitest run --coverage",
     "commit": "cz",
