chore: version bump

--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "@mthomas88/ts-data-mapper",
-  "version": "0.0.3",
+  "version": "0.1.0",
   "main": "index.js",
   "license": "MIT",
+  "publishConfig": {
+    "registry": "https://npmjs.com"
+  },
   "scripts": {
     "cli": "ts-node ./src/cli.ts",
     "test": "vitest run",
