--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "commit": "cz",
     "postinstall": "husky",
     "prepack": "pinst --disable",
-    "postpack": "pinst --enable"
+    "postpack": "pinst --enable",
+    "start-containers": "./boot-containers.sh",
+    "stop-containers": "./kill-containers.sh"
   },
   "devDependencies": {
     "@types/debug": "^4.1.12",
